# Tarea2_DL

./: CMakeLists.txt
Qtest4/: Qtest4.pro  hamming.cpp  hamming.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: main.cpp
src/logic/: Converter.cpp  Converter.h  hamming.cpp  hamming.h
src/ui/: hamming.cpp  hamming.h  hamming.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  nrzi.cpp  nrzi.h  nrzi.ui
